created the nuspec file
created the nuspec file and added the package details to it.

modified: ASCII-converter/ASCII-converter/ASCII-converter.csproj
new file: ASCII-converter/ASCII-converter/ASCII-converter.nuspec

Signed-off-by: lightman210567 <81330314+lightman210567@users.noreply.github.com>

--- a/ASCII-converter/ASCII-converter/ASCII-converter.csproj
+++ b/ASCII-converter/ASCII-converter/ASCII-converter.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>ASCII_converter</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Authors>lightman210567</Authors>
   </PropertyGroup>
 
 </Project>
