--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore $Env:GITHUB_WORKSPACE\ASCII-converter\ASCII-converter.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal $Env:GITHUB_WORKSPACE\ASCII-converter\ASCII-converter.sln
